[package]
name = "simple-redis"
authors = ["Li Xiaobin <l_xb@foxmail.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1"
dashmap = "5"
enum_dispatch = "0.3"
lazy_static = "1"
thiserror = "1"
